--- a/index.html
+++ b/index.html
@@ -8,14 +8,243 @@
     <title>panda comerses</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <header>
-        <h2 class="panda-com">
-            panda ecomerses a new path for shopping
-        </h2>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top ">
+            <div class="container">
+                <a class="navbar-brand" href="#"> <img src="images/logo.png" alt=""></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#Shoes">Shoes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#Backpack">Backpack</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Subscribe</a>
+                        </li>
+
+                    </ul>
+
+                </div>
+            </div>
+        </nav>
+        <!-- first imgageses -->
+        <section class="container p-5">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active ">
+                        <div class="row p-5 gbg-info bg-gradient d-flex align-items-center">
+                            <div class="col-lg-7">
+                                <h2>Cool Dude Headphone</h2>
+                                <p>This is the best headphnone the world for people who just want to waste time in front
+                                    of funky world</p>
+                                <h2>$420</h2>
+                                <button class="btn btn-warning">buy now</button>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row p-5 bg-info bg-gradient d-flex align-items-center">
+                            <div class="col-lg-7">
+                                <h2>Mega LCD TV For Sports</h2>
+                                <p>This is the best headphnone the world for people who just want to waste time in
+                                    front
+                                    of funky world</p>
+                                <h2>$30000</h2>
+                                <button class="btn btn-warning">buy now</button>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row p-5 bg-info bg-gradient d-flex align-items-center">
+                            <div class="col-lg-7">
+                                <h2>X-Box for your living room</h2>
+                                <p>This is the best headphnone the world for people who just want to waste time in front
+                                    of funky world</p>
+                                <h2>$645</h2>
+                                <button class="btn btn-warning">buy now</button>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
     </header>
+    <!-- main thing -->
+
+    <main>
+        <section class="container my-5">
+
+            <div class="row g-4">
+                <div class="col-lg-4">
+
+                    <div class="p-3 border bg-warning d-flex align-items-center  justify-content-between rounded-3">
+                        <h2 class="text-white">watch</h2> <img src="images/categories/watch.png" alt="">
+                    </div>
+
+                </div>
+                <div class="col-lg-4">
+
+                    <div class="p-3 border bg-success d-flex align-items-center  justify-content-between rounded-3">
+                        <h2 class="text-white">Bag</h2> <img src="images/categories/bag.png" alt="">
+                    </div>
+
+                </div>
+                <div class="col-lg-4">
+
+                    <div class="p-3 border bg-primary d-flex align-items-center  justify-content-between rounded-3">
+                        <h2 class="text-white">Shoes</h2> <img src="images/categories/shoes.png" alt="">
+                    </div>
+
+                </div>
+
+        </section>
+        <!-- show the items -->
+        <section class="container" id="Shoes">
+            <h2>Shoes</h2>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                    <div class="card border-0 shadow-lg h-100">
+                        <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Supply 34</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="m-3">
+                            <button class="btn btn-warning">Buy now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border-o shadow-lg h-100">
+                        <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Nike 360</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                        </div>
+                        <div class="m-3">
+                            <button class="btn btn-warning">Buy now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border-0 shadow-lg h-100">
+                        <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Airmax</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
+                        </div>
+                        <div class="m-3">
+                            <button class="btn btn-warning">Buy now</button>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- 2nd items -->
+        <section class="container" id="Backpack">
+
+            <div class="row row-cols-1 row-cols-md-3 g-4 my-4">
+                <div class="col">
+                    <div class="card border-0 shadow-lg h-100">
+                        <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Supply 34</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="m-3">
+                            <button class="btn btn-warning">Buy now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border-o shadow-lg h-100">
+                        <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Disa 360</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                        </div>
+                        <div class="m-3">
+                            <button class="btn btn-warning">Buy now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border-0 shadow-lg h-100">
+                        <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">black Airmax</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
+                        </div>
+                        <div class="m-3">
+                            <button class="btn btn-warning">Buy now</button>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- last section -->
+        <section style="height: 300px;"
+            class="cointainer bg-info d-flex justify-content-center align-items-center rounded-3 ">
+            <div>
+                <h2>Lets Stay In Touch</h2>
+                <p>Get updetes on sales ,special and more
+
+                </p>
+                <input type="your email" name="your email" id=""> <br>
+                <button class="btn btn-warning">Submit</button>
+            </div>
+        </section>
+
+    </main>
+    <footer class="mt-5 text-center">
+        <p><small>@2020panda commerse,all right regerve sofia,bulgaria</small></p>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
